--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -2,15 +2,17 @@
     margin: 0;
 }
 
-.dark {
-    background: black;
-    color: white;
+body {
+    background-image: url('../images/background.jpg');
+    background-size: contain;
 }
 
 #switch {
     margin-left: 90%;
     height: 30px;
     width: 30px;
+    background-image: url('../images/switch.jpg');
+    background-size: contain;
 }
 
 section {
