--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -2,15 +2,20 @@
     margin: 0;
 }
 
-.dark {
-    background: black;
-    color: white;
+body {
+    border-style: double;
+    border-width: 10px;
+    border-color: turquoise;
+    padding: 6.6%; 
+    background-image: url('../images/background2.jpg');
 }
 
 #switch {
     margin-left: 90%;
     height: 30px;
     width: 30px;
+    background-image: url('../images/switch.jpg');
+    background-size: contain;
 }
 
 .title {
@@ -21,25 +26,36 @@
 }
 
 .question {
-    margin-left: 40%;
+    margin-left: 38%;
     margin-bottom: 5%;
     font-family: 'Comic Sans', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 170%;
     color:lime;
 }
 
 .input {
-    margin-left: 40%;
+    margin-left: 30%;
+    
 }
 
-.input form {
+.blog {
     font-family: 'Comic Sans', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 2%;
+    display: flex;
+    border-style: double;
+    border-color: turquoise;
+    border-width: 10px;
+    display: inline-block;
+    font-weight: bold;
+    width: 50%;
+    height: 50%;
 }
 
-.input input {
-    margin-left: 3%;
-}
-
-.input a button {
-    margin-left: 10%;
+#submit {
+    font-family: 'Comic Sans', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    background-color: silver;
+    margin-left: 40%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
