Fixed local storage problems, added footer, added back button, and tweaked some style options

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -18,6 +18,10 @@ body {
     background-size: contain;
 }
 
+#switch:hover{
+    border-radius: 100%;
+}
+
 .title {
     margin-left: 40%;
     margin-bottom: 5%;
