--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -7,6 +7,32 @@ body {
     background-size: contain;
 }
 
+h1 {
+    font-family: 'Brush Script MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 300%;
+    color: teal;
+    margin-left: 40%;
+}
+
+.back {
+    margin-left: 5%;
+    margin-bottom: 5%;
+}
+
+#back {
+    width:100px;
+    height: 50px;
+    background-color: blueviolet;
+    font-family: 'Brush Script MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: turquoise;
+}
+
+#back:hover {
+    background-color: turquoise;
+    color: blueviolet;
+}
+
 #switch {
     margin-left: 90%;
     height: 30px;
@@ -15,15 +41,41 @@ body {
     background-size: contain;
 }
 
+#switch:hover{
+    border-radius: 100%;
+}
+
+#scr {
+    left: 0;
+    bottom: 0;
+    width: 98.5%;
+    display: flex;
+    justify-content: space-between;
+    border-style: double;
+    border-width: 10px;
+    border-color: teal;
+    font-family: 'Brush Script MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: slateblue;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#scr a {
+    text-decoration: none;
+    color: inherit;
+}
+
 section {
     font-family: 'Brush Script MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: slateblue;
     border-style: double;
     border-width: 10px;
     border-color: teal;
+    text-decoration: none;
 }
 
 section p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-bottom: 10%;
+    font-size: 20px;
+    margin-bottom: 5%;
 }
